@@ -3,7 +3,7 @@ lazy val root = (project in file(".")).
     name := "VersionControl",
     version := "1.0",
     scalaVersion := "2.10.5",
-    mainClass in Compile := Some("WikipediaImport")
+    mainClass in Compile := Some("VersionDiff")
   )
 
 resolvers ++= Seq(
@@ -16,9 +16,20 @@ libraryDependencies ++= Seq(
   "com.datastax.spark" %% "spark-cassandra-connector" % "1.6.1",
   "org.apache.spark" % "spark-sql_2.10" % "1.6.2",
   "com.datastax.cassandra" % "cassandra-driver-core" % "3.1.2",
-  "com.typesafe.play" %% "play-json" % "2.3.0"
+  "com.typesafe.play" %% "play-json" % "2.3.0",
+  "org.scalactic" %% "scalactic" % "3.0.1",
+  "org.scalatest" %% "scalatest" % "3.0.1" % "test",
+  "com.holdenkarau" %% "spark-testing-base" % "1.6.1_0.3.3"
 )
 
+// testing settings
+logBuffered in Test := false
+parallelExecution in Test := false
+fork in Test := true
+testOptions in Test := Seq(Tests.Argument(TestFrameworks.ScalaTest, "-oD"), Tests.Argument(TestFrameworks.ScalaTest, "-u", "target/test-reports"))
+javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled")
+
+// fat jar assembly settings
 mergeStrategy in assembly <<= (mergeStrategy in assembly) { (old) => {
     case PathList("META-INF", xs @ _*) => MergeStrategy.discard
     case PathList(ps @ _*) if ps.last endsWith "pom.properties" => MergeStrategy.discard
